Remove alias in .yml files

--- a/esmvalcore/quicklook/diagnostics_atmos_chem.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_chem.yml
@@ -51,4 +51,5 @@ diagnostics:
       MP_NOX:
         mip: custom
     scripts:
-      <<: *glob_timeseries
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
