--- a/esmvalcore/quicklook/diagnostics_forcings.yml
+++ b/esmvalcore/quicklook/diagnostics_forcings.yml
@@ -62,4 +62,5 @@ diagnostics:
         mip: custom
         preprocessor: prep_zon
     scripts:
-      <<: *glob_timeseries
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
