Added plot_units to precipitation variables

--- a/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
@@ -19,6 +19,7 @@ diagnostics:
       evspsbl:
          mip: Amon
          preprocessor: prep_zon
+         plot_units: mm day-1
       hfns:
         mip: Amon
         preprocessor: prep_zon
@@ -26,15 +27,19 @@ diagnostics:
       pr:
         mip: Amon
         preprocessor: prep_zon
+        plot_units: mm day-1
       prc:
         mip: Amon
         preprocessor: prep_zon
+        plot_units: mm day-1
       prl:
         mip: Amon
         preprocessor: prep_zon
+        plot_units: mm day-1
       prsn:
         mip: Amon
         preprocessor: prep_zon
+        plot_units: mm day-1
       prw:
         mip: Amon
         preprocessor: prep_zon
