--- a/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
@@ -1,5 +1,5 @@
 glob_timeseries_atmos_dyn_{run_id}:
-  description: Timeseries of atmospheric dynamic variable .
+  description: Timeseries of atmospheric dynamics variables.
   themes:
     - phys
   realms:
