--- a/esmvalcore/preprocessor/_emac/var_mapping.yml
+++ b/esmvalcore/preprocessor/_emac/var_mapping.yml
@@ -20,7 +20,7 @@ siconca: {seaice_ave: Amon}
 sithick: {siced_ave: Amon}
 rlds: {flxtbot_ave: Amon, tradsu_ave: Amon} #recipe
 rlus: {tradsu_ave: Amon} #recipe
-rlut: {flxttop_ave: Amon}
+rlut: {flxttop_ave: Amon} #recipe
 rlutcs: {flxtftop_ave: Amon}
 rsds: {flxsbot_ave: Amon, sradsu_ave: Amon} #recipe
 rsdt: {flxstop_ave: Amon, srad0u_ave: Amon} #recipe
