--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -234,7 +234,7 @@ CMIP5:
 OBS:
   cmor_strict: false
   input_dir:
-    default: 'Tier[tier]/[dataset]'
+    default: '/'
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
   input_file:
     default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
@@ -262,7 +262,7 @@ obs4mips:
 ana4mips:
   cmor_strict: false
   input_dir:
-    default: 'Tier[tier]/[dataset]'
+    default: '/'
   input_file: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   output_file: '[project]_[mip]_[type]_[dataset]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
@@ -272,4 +272,12 @@ EMAC:
     default: '[dataset]'
   input_file: ''
   output_file: '[dataset]_[ensemble]_[short_name]_[start_year]-[end_year]'
+  cmor_type: 'CMIP5'
+
+CORDEX:
+  input_dir:
+    default: '/'
+    drs1: '[project]/[product]/[Domain]/[Institution]/[GCMModelName]/[CMIP5ExperimentName]/[CMIP5EnsembleMember]/[RCMModelName]/[RCMVersionID]/[Frequency]/[VariableName]'
+  input_file: '[short_name]_[dataset]_[gcminstitute]_[exp]_[ensemble]_[rcmmodelname]_[version]_[mip]_*.nc'
+  output_file: '[short_name]_[dataset]_[exp]_[ensemble]_[version]_[mip]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
