Fixed realms and themes of quicklook recipes

--- a/esmvalcore/quicklook/diagnostics_atmos_chem.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_chem.yml
@@ -1,9 +1,13 @@
 glob_timeseries_atmos_chem_{run_id}:
   description: Timeseries of atmospheric chem.
   themes:
-    - phys
+    - aerosols
+    - chem
+    - ghg
   realms:
     - atmos
+    - aerosol
+    - atmosChem
   variables:
     co2mass:
       mip: custom
