--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -234,7 +234,7 @@ CMIP5:
 OBS:
   cmor_strict: false
   input_dir:
-    default: '/'
+    default: 'Tier[tier]/[dataset]'
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
   input_file:
     default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
@@ -262,7 +262,7 @@ obs4mips:
 ana4mips:
   cmor_strict: false
   input_dir:
-    default: '/'
+    default: 'Tier[tier]/[dataset]'
   input_file: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   output_file: '[project]_[mip]_[type]_[dataset]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
