fixed plot_unit typo in diagnostics_atmos_dynamics.yml

--- a/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
@@ -38,7 +38,7 @@ glob_timeseries_atmos_dyn_{run_id}:
     prsn:
       mip: Amon
       preprocessor: prep_zon
-      plot_units: kg day-1
+      plot_units: kg m-2 day-1
     prw:
       mip: Amon
       preprocessor: prep_zon
