--- a/esmvalcore/preprocessor/_emac/var_mapping.yml
+++ b/esmvalcore/preprocessor/_emac/var_mapping.yml
@@ -7,6 +7,7 @@ clivi: {xivi_ave: Amon}
 clt: {aclcov_ave: Amon} #recipe
 clwvi: {xlvi_ave: Amon, xivi_ave: Amon} #recipe
 co2mass: {MP_CO2_ave: tracer_pdef_gp}
+cod_sw_b01: {tau_cld_sw_B01_ave: Amon} #recipe
 evspsbl: {evap_ave: Amon} #recipe
 hfss: {ahfs_ave: Amon}
 hfls: {ahfl_ave: Amon}
