--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -222,6 +222,7 @@ OBS:
   input_file:
     default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
     BSC: '[short_name]_*.nc'
+    RCAST: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
 
