--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -219,7 +219,8 @@ EMAC:
 CORDEX:
   input_dir:
     default: '/'
-    drs1: '[project]/[product]/[Domain]/[Institution]/[GCMModelName]/[CMIP5ExperimentName]/[CMIP5EnsembleMember]/[RCMModelName]/[RCMVersionID]/[Frequency]/[VariableName]'
-  input_file: '[short_name]_[dataset]_[gcminstitute]_[exp]_[ensemble]_[rcmmodelname]_[version]_[mip]_*.nc'
-  output_file: '[short_name]_[dataset]_[exp]_[ensemble]_[version]_[mip]_[start_year]-[end_year]'
+    spec: '[domain]/[institute]/[driver]/[exp]/[ensemble]/[dataset]/[rcm_version]/[frequency]/[short_name]'
+    BADC: '[domain]/[institute]/[driver]/[exp]/[ensemble]/[dataset]/[rcm_version]/[frequency]/[short_name]/[latest_version]'
+  input_file: '[short_name]_[domain]_[driver]_[exp]_[ensemble]_[dataset]_[rcm_version]_[frequency]*.nc'
+  output_file: '[short_name]_[dataset]_[exp]_[ensemble]_[rcm_version]_[frequency]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
