--- a/meta.yaml
+++ b/meta.yaml
@@ -44,6 +44,7 @@ requirements:
     - cf-units
     - cython  # required by cf-units but not automatically installed
     - esmpy
+    - fiona
     - nc-time-axis
     - netCDF4
     - numba
@@ -52,6 +53,7 @@ requirements:
     - psutil
     - pydot
     - pyyaml
+    - shapely
     - yamale  # in esmvalgroup and birdhouse channel
 
 test:
