Only run installation test if unit tests succeed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,7 +184,9 @@ workflows:
   commit:
     jobs:
       - test
-      - install
+      - install:
+          requires:
+            - test
       - documentation
   nightly:
     triggers:
