Add default prefix option for CMOR3 tables

--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -169,6 +169,7 @@ obs4mips:
   output_file: '[project]_[dataset]_[level]_[version]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP6'
   cmor_path: 'obs4mips'
+  cmor_default_table_prefix: 'obs4MIPs_'
 
 ana4mips:
   cmor_strict: false
