--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -111,7 +111,7 @@ OBS:
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
     RCAST: '[dataset]'
   input_file:
-    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]*.nc'
+    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
     BSC: '[short_name]_*.nc'
     RCAST: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
