--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -105,6 +105,15 @@ CMIP5:
     'NorESM1-M': ['NCC']
     'NorESM1-ME': ['NCC']
 
+CMIP3:
+  cmor_strict: true
+  input_dir:
+    default: '/'
+    BADC: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[short_name]/[ensemble]/[latestversion]'
+  input_file: '[short_name]*.nc'
+  output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[short_name]_[start_year]-[end_year]'
+  cmor_type: 'CMIP3'
+
 OBS:
   cmor_strict: false
   input_dir:
