--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -110,6 +110,7 @@ CMIP3:
   input_dir:
     default: '/'
     BADC: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[short_name]/[ensemble]/[latestversion]'
+    DKRZ: '[exp]/[modeling_realm]/[frequency]/[short_name]/[dataset]/[ensemble]'
   input_file: '[short_name]*.nc'
   output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP3'
