Revert "align config developer to development branch"
This reverts commit 7fdaaf745f42ffd7bfc3d63e3158a93532b10baa.

--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -22,26 +22,26 @@ CMIP6:
   cmor_strict: true
   input_dir:
     default: '/'
-    BADC: '[activity]/[institute]/[dataset]/[exp]/[ensemble]/[mip]/[short_name]/[grid]/[latestversion]'
-    DKRZ: '[activity]/[institute]/[dataset]/[exp]/[ensemble]/[mip]/[short_name]/[grid]/[latestversion]'
-    ETHZ: '[exp]/[mip]/[short_name]/[dataset]/[ensemble]/[grid]/'
-  input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]_[grid]*.nc'
-  output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[short_name]_[start_year]-[end_year]'
+    BADC: '{activity}/{institute}/{dataset}/{exp}/{ensemble}/{mip}/{short_name}/{grid}/{latestversion}'
+    DKRZ: '{activity}/{institute}/{dataset}/{exp}/{ensemble}/{mip}/{short_name}/{grid}/{latestversion}'
+    ETHZ: '{exp}/{mip}/{short_name}/{dataset}/{ensemble}/{grid}/'
+  input_file: '{short_name}_{mip}_{dataset}_{exp}_{ensemble}_{grid}_*.nc'
+  output_file: '{project}_{dataset}_{mip}_{exp}_{ensemble}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP6'
 
 CMIP5:
   cmor_strict: true
   input_dir:
     default: '/'
-    BADC: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[mip]/[ensemble]/[latestversion]/[short_name]'
-    CP4CDS: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[mip]/[ensemble]/[short_name]/latest/'
-    DKRZ: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[mip]/[ensemble]/[latestversion]/[short_name]'
-    ETHZ: '[exp]/[mip]/[short_name]/[dataset]/[ensemble]/'
-    SMHI: '[dataset]/[ensemble]/[exp]/[frequency]'
-    RCAST: '[exp]/[mip]/[short_name]/[dataset]/[ensemble]/'
-    BSC: '[type]/[project]/[exp]/[dataset.lower]'
-  input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]*.nc'
-  output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[short_name]_[start_year]-[end_year]'
+    BADC: '{institute}/{dataset}/{exp}/{frequency}/{modeling_realm}/{mip}/{ensemble}/latest/{short_name}'
+    CP4CDS: '{institute}/{dataset}/{exp}/{frequency}/{modeling_realm}/{mip}/{ensemble}/{short_name}/latest/'
+    DKRZ: '{institute}/{dataset}/{exp}/{frequency}/{modeling_realm}/{mip}/{ensemble}/{latestversion}/{short_name}'
+    ETHZ: '{exp}/{mip}/{short_name}/{dataset}/{ensemble}/'
+    SMHI: '{dataset}/{ensemble}/{exp}/{frequency}'
+    RCAST: '{exp}/{mip}/{short_name}/{dataset}/{ensemble}/'
+    BSC: '{type}/{project}/{exp}/{dataset.lower}'
+  input_file: '{short_name}_{mip}_{dataset}_{exp}_{ensemble}_*.nc'
+  output_file: '{project}_{dataset}_{mip}_{exp}_{ensemble}_{short_name}_{start_year}-{end_year}'
   institutes:
     'ACCESS1-0': ['CSIRO-BOM']
     'ACCESS1-3': ['CSIRO-BOM']
@@ -108,38 +108,38 @@ CMIP5:
 OBS:
   cmor_strict: false
   input_dir:
-    default: 'Tier[tier]/[dataset]'
-    BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
-    RCAST: '[dataset]'
+    default: 'Tier{tier}/{dataset}'
+    BSC: '{type}/{institute.lower}/{dataset.lower}/{freq_folder}/{short_name}{freq_base}'
+    RCAST: '{dataset}'
   input_file:
-    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
-    BSC: '[short_name]_*.nc'
-    RCAST: '[short_name]_[mip]_[type]_[dataset]_*.nc'
-  output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
+    default: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}[_.]*nc'
+    BSC: '{short_name}_*.nc'
+    RCAST: '{short_name}_{mip}_{type}_{dataset}_*.nc'
+  output_file: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP5'
 
 OBS6:
   cmor_strict: false
   input_dir:
-    default: 'Tier[tier]/[dataset]'
-    BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
+    default: 'Tier{tier}/{dataset}'
+    BSC: '{type}/{institute.lower}/{dataset.lower}/{freq_folder}/{short_name}{freq_base}'
   input_file:
-    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
-    BSC: '[short_name]_*.nc'
+    default: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}_*.nc'
+    BSC: '{short_name}_*.nc'
   input_fx_dir:
-    default: 'Tier[tier]/[dataset]'
+    default: 'Tier{tier}/{dataset}'
   input_fx_file:
-    default: '[project]_[dataset]_[type]_[version]_fx_[fx_var].nc'
-  output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
+    default: '{project}_{dataset}_{type}_{version}_fx_{fx_var}.nc'
+  output_file: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP6'
 
 obs4mips:
   cmor_strict: true
   input_dir:
-    default: 'Tier[tier]/[dataset]'
+    default: 'Tier{tier}/{dataset}'
     RCAST: '/'
-  input_file: '[short_name]_[dataset]_[level]_[version]_*.nc'
-  output_file: '[project]_[dataset]_[level]_[version]_[short_name]_[start_year]-[end_year]'
+  input_file: '{short_name}_{dataset}_{level}_{version}_*.nc'
+  output_file: '{project}_{dataset}_{level}_{version}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP6'
   cmor_path: 'obs4mips'
   cmor_default_table_prefix: 'obs4MIPs_'
@@ -147,16 +147,16 @@ obs4mips:
 ana4mips:
   cmor_strict: false
   input_dir:
-    default: 'Tier[tier]/[dataset]'
+    default: 'Tier{tier}/{dataset}'
     RCAST: '/'
-  input_file: '[short_name]_[mip]_[type]_[dataset]_*.nc'
-  output_file: '[project]_[mip]_[type]_[dataset]_[short_name]_[start_year]-[end_year]'
+  input_file: '{short_name}_{mip}_{type}_{dataset}_*.nc'
+  output_file: '{project}_{mip}_{type}_{dataset}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP5'
   # TODO: add cmor_path and table and set cmor_strict to true
 
 EMAC:
   input_dir:
-    default: '[dataset]'
+    default: '{dataset}'
   input_file: ''
-  output_file: '[dataset]_[ensemble]_[short_name]_[start_year]-[end_year]'
+  output_file: '{dataset}_{ensemble}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP5'
