--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -150,7 +150,7 @@ CMIP5:
   input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]_*.nc'
   input_fx_dir:
     default: '/'
-    BADC: '[institute]/[dataset]/[exp]/fx/[modeling_realm]/fx/r0i0p0/[latestversion]/[fx_var]'
+    BADC: '[institute]/[dataset]/[exp]/fx/[modeling_realm]/fx/r0i0p0/latest/[fx_var]'
     CP4CDS: '[institute]/[dataset]/[exp]/fx/[modeling_realm]/fx/r0i0p0/[fx_var]/latest/'
     DKRZ: '[institute]/[dataset]/[exp]/fx/[modeling_realm]/fx/r0i0p0/[latestversion]/[fx_var]'
     ETHZ: '[exp]/fx/[fx_var]/[dataset]/r0i0p0'
@@ -211,7 +211,7 @@ CMIP5:
     'HadGEM2-A': ['MOHC']
     'HadGEM2-AO': ['NIMR-KMA']
     'HadGEM2-CC': ['MOHC']
-    'HadGEM2-ES': ['INPE', 'MOHC']
+    'HadGEM2-ES': ['MOHC',]
     'inmcm4': ['INM']
     'IPSL-CM5A-LR': ['IPSL']
     'IPSL-CM5A-MR': ['IPSL']
