--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -115,6 +115,30 @@ CMIP3:
   output_file: '{project}_{institute}_{dataset}_{mip}_{exp}_{ensemble}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP3'
   institutes:
+    'bccr_bcm2_0': ['BCCR']
+    'cccma_cgcm3_1': ['CCCMA']
+    'cccma_cgcm3_1_t63': ['CCCMA']
+    'cnrm_cm3': ['CNRM']
+    'csiro_mk3_0': ['CSIRO']
+    'csiro_mk3_5': ['CSIRO']
+    'gfdl_cm2_0': ['GFDL']
+    'gfdl_cm2_1': ['GFDL']
+    'ingv_echam4': ['INGV']
+    'inmcm3_0': ['INM']
+    'ipsl_cm4': ['IPSL']
+    'iap_fgoals1_0_g': ['LASG']
+    'miub_echo_g': ['MIUB-KMA']
+    'mpi_echam5': ['MPIM']
+    'mri_cgcm2_3_2a': ['MRI']
+    'giss_aom': ['NASA']
+    'giss_model_e_h': ['NASA']
+    'giss_model_e_r': ['NASA']
+    'ncar_ccsm3_0': ['NCAR']
+    'ncar_pcm1': ['NCAR']
+    'miroc3_2_hires': ['NIES']
+    'miroc3_2_medres': ['NIES']
+    'ukmo_hadcm3': ['UKMO']
+    'ukmo_hadgem1': ['UKMO']
     'BCM2': ['BCCR']
     'CGCM3-1-T47': ['CCCMA']
     'CGCM3-1-T63': ['CCCMA']
