--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -124,7 +124,7 @@ OBS6:
     default: 'Tier{tier}/{dataset}'
     BSC: '{type}/{institute.lower}/{dataset.lower}/{freq_folder}/{short_name}{freq_base}'
   input_file:
-    default: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}_*.nc'
+    default: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}[_.]*nc'
     BSC: '{short_name}_*.nc'
   output_file: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}_{start_year}-{end_year}'
   cmor_type: 'CMIP6'
