--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -27,6 +27,9 @@ CMIP6:
     ETHZ: '{exp}/{mip}/{short_name}/{dataset}/{ensemble}/{grid}/'
   input_file: '{short_name}_{mip}_{dataset}_{exp}_{ensemble}_{grid}*.nc'
   output_file: '{project}_{dataset}_{mip}_{exp}_{ensemble}_{short_name}_{start_year}-{end_year}'
+  institutes:
+    'CESM2-WACCM': ['NCAR']
+    'MPI-ESM1-2-XR': ['MPI-M']
   cmor_type: 'CMIP6'
 
 CMIP5:
