--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -219,8 +219,9 @@ EMAC:
 CORDEX:
   input_dir:
     default: '/'
-    spec: '[domain]/[institute]/[driver]/[exp]/[ensemble]/[dataset]/[rcm_version]/[frequency]/[short_name]'
-    BADC: '[domain]/[institute]/[driver]/[exp]/[ensemble]/[dataset]/[rcm_version]/[frequency]/[short_name]/[latest_version]'
-  input_file: '[short_name]_[domain]_[driver]_[exp]_[ensemble]_[dataset]_[rcm_version]_[frequency]*.nc'
-  output_file: '[short_name]_[dataset]_[exp]_[ensemble]_[rcm_version]_[frequency]_[start_year]-[end_year]'
+    spec: '{domain}/{institute}/{driver}/{exp}/{ensemble}/{dataset}/{rcm_version}/{mip}/{short_name}'
+    BADC: '{domain}/{institute}/{driver}/{exp}/{ensemble}/{dataset}/{rcm_version}/{mip}/{short_name}/{latestversion}'
+  input_file: '{short_name}_{domain}_{driver}_{exp}_{ensemble}_{dataset}_{rcm_version}_{mip}*.nc'
+  output_file: '{short_name}_{dataset}_{exp}_{ensemble}_{rcm_version}_{mip}'
   cmor_type: 'CMIP5'
+  cmor_path: 'cordex'
